--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -25,3 +25,15 @@
     justify-content: space-between;
     align-items: center;
 }
+.pagination{
+   text-align: center;
+   margin-bottom: 50px;
+}
+.pagination button{
+    margin-right: 5px;
+    border: 1px solid black;
+}
+.pagination .selected{
+    background-color: #FF9900;
+    color: white;
+}
